--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
+    "arrowParens": "always",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "cursorOffset": -1,
+    "embeddedLanguageFormatting": "auto",
+    "endOfLine": "lf",
     "semi": true,
-    "singleQuote": true
+    "tabWidth": 2
 }
